--- a/css/general.css
+++ b/css/general.css
@@ -74,6 +74,10 @@ h4{
 	position: relative;
 	top: 220px;
 }
+#query08{
+	 position: relative;
+	 top: 50px;
+ }
 
 #query04{
 	  position: relative;
